build based on 9dc1fc8

--- a/dev/examples/index.html
+++ b/dev/examples/index.html
@@ -12,9 +12,9 @@ stats = algencan(nlp)
 print(stats)
 
 finalize(nlp)</code></pre><pre class="documenter-example-output">┌ Info: using problem repository
-└   ENV[&quot;MASTSIF&quot;] = &quot;/home/travis/.julia/artifacts/a7ea0d0aaf29a39ca0fe75588fc077cdd5b5ed54/optrove-sif-99c5b38e7d03&quot;
+└   ENV[&quot;MASTSIF&quot;] = &quot;/Users/travis/.julia/artifacts/a7ea0d0aaf29a39ca0fe75588fc077cdd5b5ed54/optrove-sif-99c5b38e7d03&quot;
 ┌ Info: using full SIF collection located at
-└   ENV[&quot;MASTSIF&quot;] = &quot;/home/travis/.julia/artifacts/a7ea0d0aaf29a39ca0fe75588fc077cdd5b5ed54/optrove-sif-99c5b38e7d03&quot;
+└   ENV[&quot;MASTSIF&quot;] = &quot;/Users/travis/.julia/artifacts/a7ea0d0aaf29a39ca0fe75588fc077cdd5b5ed54/optrove-sif-99c5b38e7d03&quot;
 
  ==============================================================================
  This is ALGENCAN 3.1.1.
@@ -95,7 +95,7 @@ ite         function  ibilty  obj-funct infeas +compl graLag infeas totit forKKT
  Subroutine hlpsub   (coded=F):        0
 
 
- Total CPU time in seconds =     0.35
+ Total CPU time in seconds =     0.41
 Generic Execution stats
   status: first-order stationary
   objective value: 1.7279793074334713e-23
@@ -104,7 +104,7 @@ Generic Execution stats
   solution: [1.000000000004157  1.0000000000123]
   multipliers: [-1.2975731600306517e-15]
   iterations: -1
-  elapsed time: 1.231345664</pre><h2 id="Utilizing-a-specification-file"><a class="docs-heading-anchor" href="#Utilizing-a-specification-file">Utilizing a specification file</a><a id="Utilizing-a-specification-file-1"></a><a class="docs-heading-anchor-permalink" href="#Utilizing-a-specification-file" title="Permalink"></a></h2><p><strong>specfnm.dat</strong></p><pre><code class="language-none">FEASIBILITY-TOLERANCE 1.0e-5
+  elapsed time: 1.331900574</pre><h2 id="Utilizing-a-specification-file"><a class="docs-heading-anchor" href="#Utilizing-a-specification-file">Utilizing a specification file</a><a id="Utilizing-a-specification-file-1"></a><a class="docs-heading-anchor-permalink" href="#Utilizing-a-specification-file" title="Permalink"></a></h2><p><strong>specfnm.dat</strong></p><pre><code class="language-none">FEASIBILITY-TOLERANCE 1.0e-5
 OPTIMALITY-TOLERANCE 1.0e-5
 STAINF-FEASIBILITY-TOLERANCE 3.162278e-03
 STAINF-OPTIMALITY-TOLERANCE 3.162278e-08
@@ -125,7 +125,7 @@ stats = algencan(nlp, specfnm=&quot;specfnm.dat&quot;)
 print(stats)
 
 finalize(nlp)</code></pre><pre class="documenter-example-output">┌ Info: using full SIF collection located at
-└   ENV[&quot;MASTSIF&quot;] = &quot;/home/travis/.julia/artifacts/a7ea0d0aaf29a39ca0fe75588fc077cdd5b5ed54/optrove-sif-99c5b38e7d03&quot;
+└   ENV[&quot;MASTSIF&quot;] = &quot;/Users/travis/.julia/artifacts/a7ea0d0aaf29a39ca0fe75588fc077cdd5b5ed54/optrove-sif-99c5b38e7d03&quot;
 
  ==============================================================================
  This is ALGENCAN 3.1.1.
@@ -228,4 +228,4 @@ Generic Execution stats
   solution: [0.999999999976238  1.0000000001009122]
   multipliers: [-1.5356314551376866e-13]
   iterations: -1
-  elapsed time: 0.132571422</pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../parameters/">« Optional parameters</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> on <span class="colophon-date" title="Thursday 21 January 2021 17:12">Thursday 21 January 2021</span>. Using Julia version 1.4.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+  elapsed time: 0.159909084</pre></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../parameters/">« Optional parameters</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> on <span class="colophon-date" title="Thursday 21 January 2021 17:14">Thursday 21 January 2021</span>. Using Julia version 1.4.2.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
